Otimização de perfomance: Paginação, indices, e cache