@@ -1,6 +1,7 @@
 package com.simplesdental.product.service;
 
 import com.simplesdental.product.model.Product;
+import com.simplesdental.product.model.dto.ProductV2DTO;
 import com.simplesdental.product.repository.ProductRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -8,6 +9,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Page;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
@@ -53,26 +58,53 @@ public class ProductServiceTest {
     }
 
     @Test
-    void shouldGetAllProducts() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product));
+    void shouldGetAllProductsWithAlphanumericCode() {
+        Pageable pageable = PageRequest.of(0, 10);
+        PageImpl<Product> productPage = new PageImpl<>(List.of(product), pageable, 1);
+        when(productRepository.findAllWithAlphanumericCode(any(Pageable.class))).thenReturn(productPage);
 
-        List<Product> products = productService.findAll();
+        Page<Product> products = productService.findAll(pageable);
 
         assertThat(products).isNotNull();
-        assertThat(products.size()).isEqualTo(1);
-        verify(productRepository, times(1)).findAll();
+        assertThat(products.getTotalElements()).isEqualTo(1);
+        verify(productRepository, times(1)).findAllWithAlphanumericCode(any(Pageable.class));
     }
 
     @Test
-    void shouldGetProductById() {
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
+    void shouldGetAllProductsWithNumericCode() {
+        Pageable pageable = PageRequest.of(0, 10);
+        PageImpl<Product> productPage = new PageImpl<>(List.of(product), pageable, 1);
+        when(productRepository.findAllWithNumericCode(any(Pageable.class))).thenReturn(productPage);
+
+        Page<Product> products = productService.findAllWithNumericCode(pageable);
+
+        assertThat(products).isNotNull();
+        assertThat(products.getTotalElements()).isEqualTo(1);
+        verify(productRepository, times(1)).findAllWithNumericCode(any(Pageable.class));
+    }
+
+    @Test
+    void shouldGetProductByIdWithAlphanumericCode() {
+        when(productRepository.findByIdWithAlphanumericCode(1L)).thenReturn(Optional.of(product));
 
         Optional<Product> foundProduct = productService.findByIdWithAlphanumericCode(1L);
 
         assertThat(foundProduct).isPresent();
         assertThat(foundProduct.get().getId()).isEqualTo(1L);
         assertThat(foundProduct.get().getName()).isEqualTo("Test Product");
-        verify(productRepository, times(1)).findById(1L);
+        verify(productRepository, times(1)).findByIdWithAlphanumericCode(1L);
+    }
+
+    @Test
+    void shouldGetProductByIdWithNumericCode() {
+        when(productRepository.findByIdWithNumericCode(1L)).thenReturn(Optional.of(product));
+
+        Optional<Product> foundProduct = productService.findByIdWithNumericCode(1L);
+
+        assertThat(foundProduct).isPresent();
+        assertThat(foundProduct.get().getId()).isEqualTo(1L);
+        assertThat(foundProduct.get().getName()).isEqualTo("Test Product");
+        verify(productRepository, times(1)).findByIdWithNumericCode(1L);
     }
 
     @Test
